--- a/style.css
+++ b/style.css
@@ -561,7 +561,7 @@ body {
     width: 40px;
     height: 40px;
     background: white;
-    color: var(--text-primary);
+    color: black;
     border-radius: 50%;
     display: flex;
     align-items: center;
